--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
    Lockpicking.rocks is a website dedicated to lockpicking in the uk.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://lockpicking.rocks" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: MoonOnAStickLP
 twitter_username: timmehwimmy
 github_username:  phpsystems
 
